# analisisipt

./: app.py  index.py  main.py  pyproject.toml  requirements.txt  utils.py  wsgi.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: app.py  requirements.txt
src/data/: ipt_2016_2021_4.csv
templates/: graficas.html  index.html
