[tool.poetry]
name = "analisisipt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Flask = "~2.0"
gunicorn = "~20.1"
pandas = "~1.2"
numpy = "~1.20"
plotly = "~4.14"
statsmodels = "~0.12"
pmdarima = "~1.8"
matplotlib = "~3.4"

[tool.poetry.dev-dependencies]

[build-system]
